# Rust-and-Go-Wallet

./: Cargo.toml  DOCS.md  README.md  go.mod
go-wallet/: main.go
src/: main.rs
